torch-sys/src/c_generated.rs

    pub fn atg_replication_pad2d(self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_replication_pad2d_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_replication_pad2d_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_replication_pad2d_out(output_: *mut C_tensor, self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_replication_pad3d(self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_replication_pad3d_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_replication_pad3d_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_replication_pad3d_out(output_: *mut C_tensor, self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_reshape(self_: *mut C_tensor, shape_data: *const i64, shape_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_reshape_as(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_resize_(self_: *mut C_tensor, size_data: *const i64, size_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_resize_as_(self_: *mut C_tensor, the_template_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_rfft(self_: *mut C_tensor, signal_ndim_: i64, normalized_: c_int, onesided_: c_int) -> *mut *mut C_tensor;
    pub fn atg_rnn_relu(input_: *mut C_tensor, hx_: *mut C_tensor, params_data: *const *mut C_tensor, params_len: c_int, has_biases_: c_int, num_layers_: i64, dropout_: f64, train_: c_int, bidirectional_: c_int, batch_first_: c_int) -> *mut *mut C_tensor;
    pub fn atg_rnn_relu1(data_: *mut C_tensor, batch_sizes_: *mut C_tensor, hx_: *mut C_tensor, params_data: *const *mut C_tensor, params_len: c_int, has_biases_: c_int, num_layers_: i64, dropout_: f64, train_: c_int, bidirectional_: c_int) -> *mut *mut C_tensor;
    pub fn atg_rnn_relu_cell(input_: *mut C_tensor, hx_: *mut C_tensor, w_ih_: *mut C_tensor, w_hh_: *mut C_tensor, b_ih_: *mut C_tensor, b_hh_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_rnn_tanh(input_: *mut C_tensor, hx_: *mut C_tensor, params_data: *const *mut C_tensor, params_len: c_int, has_biases_: c_int, num_layers_: i64, dropout_: f64, train_: c_int, bidirectional_: c_int, batch_first_: c_int) -> *mut *mut C_tensor;
    pub fn atg_rnn_tanh1(data_: *mut C_tensor, batch_sizes_: *mut C_tensor, hx_: *mut C_tensor, params_data: *const *mut C_tensor, params_len: c_int, has_biases_: c_int, num_layers_: i64, dropout_: f64, train_: c_int, bidirectional_: c_int) -> *mut *mut C_tensor;
    pub fn atg_rnn_tanh_cell(input_: *mut C_tensor, hx_: *mut C_tensor, w_ih_: *mut C_tensor, w_hh_: *mut C_tensor, b_ih_: *mut C_tensor, b_hh_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_roipooling2d_backward(input_: *mut C_tensor, rois_: *mut C_tensor, pooledHeight_: i64, pooledWidth_: i64, spatialScale_: f64, gradOutput_: *mut C_tensor, argmaxes_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_roll(self_: *mut C_tensor, shifts_data: *const i64, shifts_len: c_int, dims_data: *const i64, dims_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_rot90(self_: *mut C_tensor, k_: i64, dims_data: *const i64, dims_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_round(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_round_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_round_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_rrelu(self_: *mut C_tensor, training_: c_int) -> *mut *mut C_tensor;
    pub fn atg_rrelu_(self_: *mut C_tensor, training_: c_int) -> *mut *mut C_tensor;
    pub fn atg_rrelu_with_noise(self_: *mut C_tensor, noise_: *mut C_tensor, training_: c_int) -> *mut *mut C_tensor;
    pub fn atg_rrelu_with_noise_(self_: *mut C_tensor, noise_: *mut C_tensor, training_: c_int) -> *mut *mut C_tensor;
    pub fn atg_rrelu_with_noise_out(output_: *mut C_tensor, self_: *mut C_tensor, noise_: *mut C_tensor, training_: c_int) -> *mut *mut C_tensor;
    pub fn atg_rsqrt(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_rsqrt_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_rsqrt_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_rsub(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_rsub1(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_s_native_addmm(self_: *mut C_tensor, mat1_: *mut C_tensor, mat2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_s_native_addmm_(self_: *mut C_tensor, mat1_: *mut C_tensor, mat2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_s_native_addmm_out(result_: *mut C_tensor, self_: *mut C_tensor, mat1_: *mut C_tensor, mat2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_scatter_(self_: *mut C_tensor, dim_: i64, index_: *mut C_tensor, src_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_scatter_1(self_: *mut C_tensor, dim_: i64, index_: *mut C_tensor, value_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_scatter_add_(self_: *mut C_tensor, dim_: i64, index_: *mut C_tensor, src_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_select(self_: *mut C_tensor, dim_: i64, index_: i64) -> *mut *mut C_tensor;
    pub fn atg_selu(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_selu_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_set_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_set_1(self_: *mut C_tensor, source_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_set_requires_grad(self_: *mut C_tensor, r_: c_int) -> *mut *mut C_tensor;
    pub fn atg_sigmoid(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_sigmoid_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_sigmoid_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_sign(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_sign_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_sign_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_sin(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_sin_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_sin_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_sinh(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_sinh_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_sinh_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_slice(self_: *mut C_tensor, dim_: i64, start_: i64, end_: i64, step_: i64) -> *mut *mut C_tensor;
    pub fn atg_slogdet(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_smm(self_: *mut C_tensor, mat2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_smooth_l1_loss(self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_smooth_l1_loss_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_smooth_l1_loss_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_smooth_l1_loss_out(output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_soft_margin_loss(self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_soft_margin_loss_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_soft_margin_loss_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_soft_margin_loss_out(output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_softmax(self_: *mut C_tensor, dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_softmax1(self_: *mut C_tensor, dim_: i64, dtype_: c_int) -> *mut *mut C_tensor;
    pub fn atg_softplus(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_softplus_out(output_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_softshrink(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_softshrink_out(output_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_sort(self_: *mut C_tensor, dim_: i64, descending_: c_int) -> *mut *mut C_tensor;
    pub fn atg_sort_out(values_: *mut C_tensor, indices_: *mut C_tensor, self_: *mut C_tensor, dim_: i64, descending_: c_int) -> *mut *mut C_tensor;
    pub fn atg_sparse_coo_tensor(size_data: *const i64, size_len: c_int, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_sparse_coo_tensor1(indices_: *mut C_tensor, values_: *mut C_tensor, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_sparse_coo_tensor2(indices_: *mut C_tensor, values_: *mut C_tensor, size_data: *const i64, size_len: c_int, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_sparse_resize_(self_: *mut C_tensor, size_data: *const i64, size_len: c_int, sparse_dim_: i64, dense_dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_sparse_resize_and_clear_(self_: *mut C_tensor, size_data: *const i64, size_len: c_int, sparse_dim_: i64, dense_dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_split(self_: *mut C_tensor, split_size_: i64, dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_split_with_sizes(self_: *mut C_tensor, split_sizes_data: *const i64, split_sizes_len: c_int, dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_sqrt(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_sqrt_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_sqrt_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_squeeze(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_squeeze1(self_: *mut C_tensor, dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_squeeze_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_squeeze_1(self_: *mut C_tensor, dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_sspaddmm(self_: *mut C_tensor, mat1_: *mut C_tensor, mat2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_sspaddmm_out(result_: *mut C_tensor, self_: *mut C_tensor, mat1_: *mut C_tensor, mat2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_stack(tensors_data: *const *mut C_tensor, tensors_len: c_int, dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_stack_out(result_: *mut C_tensor, tensors_data: *const *mut C_tensor, tensors_len: c_int, dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_std(self_: *mut C_tensor, unbiased_: c_int) -> *mut *mut C_tensor;
    pub fn atg_std1(self_: *mut C_tensor, dim_: i64, unbiased_: c_int, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_std_out(result_: *mut C_tensor, self_: *mut C_tensor, dim_: i64, unbiased_: c_int, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_stft(self_: *mut C_tensor, n_fft_: i64, hop_length_: i64, win_length_: i64, window_: *mut C_tensor, normalized_: c_int, onesided_: c_int) -> *mut *mut C_tensor;
    pub fn atg_sub(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_sub1(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
